[gd_scene load_steps=4 format=3 uid="uid://c1cosy7uw6uw8"]

[ext_resource type="Script" path="res://Main.gd" id="1_awwlu"]
[ext_resource type="Texture2D" uid="uid://bhpdxvp1lr0hb" path="res://icons/arrow.png" id="2_btuv8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_78hdn"]
bg_color = Color(0.419608, 0.419608, 0.419608, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Main" type="Node2D"]
script = ExtResource("1_awwlu")

[node name="Buttons" type="Node2D" parent="."]

[node name="Load" type="Button" parent="Buttons"]
offset_left = 15.0
offset_top = 56.0
offset_right = 75.0
offset_bottom = 91.0
focus_mode = 0
text = "Load"
metadata/_edit_use_anchors_ = true

[node name="Select" type="Button" parent="Buttons"]
offset_left = 350.0
offset_top = 55.0
offset_right = 410.0
offset_bottom = 90.0
focus_mode = 0
disabled = true
text = "Select"
metadata/_edit_use_anchors_ = true

[node name="Next" type="Button" parent="Buttons"]
offset_left = 863.0
offset_top = 53.0
offset_right = 923.0
offset_bottom = 88.0
focus_mode = 0
disabled = true
text = "Next"
metadata/_edit_use_anchors_ = true

[node name="Last" type="Button" parent="Buttons"]
offset_left = 799.0
offset_top = 53.0
offset_right = 859.0
offset_bottom = 88.0
focus_mode = 0
disabled = true
text = "Last
"
metadata/_edit_use_anchors_ = true

[node name="Indicate" type="Node2D" parent="."]

[node name="Arrow1" type="TextureRect" parent="Indicate"]
visible = false
offset_left = 542.0
offset_top = 108.0
offset_right = 582.0
offset_bottom = 148.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_btuv8")

[node name="Arrow2" type="TextureRect" parent="Indicate"]
visible = false
offset_left = 252.0
offset_top = 233.0
offset_right = 292.0
offset_bottom = 273.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_btuv8")

[node name="Arrow3" type="TextureRect" parent="Indicate"]
visible = false
offset_left = 814.0
offset_top = 238.0
offset_right = 854.0
offset_bottom = 278.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_btuv8")

[node name="Info" type="Node2D" parent="."]

[node name="Item" type="Label" parent="Info"]
offset_left = 829.0
offset_top = 95.0
offset_right = 889.0
offset_bottom = 118.0
text = "Item[...]"

[node name="Data" type="Label" parent="Info"]
offset_left = 829.0
offset_top = 115.0
offset_right = 1088.0
offset_bottom = 138.0
text = "..."

[node name="Current" type="Label" parent="Info"]
visible = false
offset_left = 823.0
offset_top = 71.0
offset_right = 888.0
offset_bottom = 94.0
text = "Current:"

[node name="Header" type="Label" parent="Info"]
offset_left = 410.0
offset_top = 151.0
offset_right = 710.0
offset_bottom = 174.0
text = "..."
horizontal_alignment = 1

[node name="Files" type="Node2D" parent="."]

[node name="Background" type="Panel" parent="Files"]
offset_left = 89.0
offset_top = 51.0
offset_right = 339.0
offset_bottom = 181.0
theme_override_styles/panel = SubResource("StyleBoxFlat_78hdn")

[node name="Label" type="Label" parent="Files"]
offset_left = 171.0
offset_top = 22.0
offset_right = 233.0
offset_bottom = 45.0
text = "Files"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Files"]
offset_left = 94.0
offset_top = 57.0
offset_right = 335.0
offset_bottom = 175.0
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Files/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Files/ScrollContainer/MarginContainer"]
custom_minimum_size = Vector2(225, 22)
layout_mode = 2
theme_override_constants/separation = 4

[node name="Dialog" type="Node2D" parent="."]

[node name="Panel1" type="Panel" parent="Dialog"]
offset_left = 150.0
offset_top = 300.0
offset_right = 409.0
offset_bottom = 568.0

[node name="TextBox1" type="RichTextLabel" parent="Dialog"]
offset_left = 159.0
offset_top = 307.0
offset_right = 400.0
offset_bottom = 560.0
text = "..."

[node name="Name1" type="Label" parent="Dialog"]
offset_left = 238.0
offset_top = 267.0
offset_right = 300.0
offset_bottom = 290.0
text = "..."
horizontal_alignment = 1

[node name="Panel2" type="Panel" parent="Dialog"]
offset_left = 700.0
offset_top = 300.0
offset_right = 959.0
offset_bottom = 568.0

[node name="TextBox2" type="RichTextLabel" parent="Dialog"]
offset_left = 709.0
offset_top = 307.0
offset_right = 951.0
offset_bottom = 559.0
text = "..."

[node name="Name2" type="Label" parent="Dialog"]
offset_left = 801.0
offset_top = 268.0
offset_right = 863.0
offset_bottom = 291.0
text = "..."
horizontal_alignment = 1

[connection signal="pressed" from="Buttons/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Buttons/Select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="Buttons/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Buttons/Last" to="." method="_on_last_pressed"]
